5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4189/executions/1582_1560.log
== TEST (2019-03-13 23:54:11) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower")
-- OUTPUT:
Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:54:35) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower()")
-- OUTPUT:
Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower()
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:54:41) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower()")
-- EXECUTION TIME:
0.146222
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower()
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:55:15) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
-- ERROR:
File "XXXX", line 2
    print(.lower("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."))
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:56:57) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower
AttributeError: 'NoneType' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:57:21) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower()
-- ERROR:
File "XXXX", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower()
                                                                                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 23:57:25) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower()
-- EXECUTION TIME:
0.13353
-- ERROR:
  File "/home/codebench/codes/1582/1560/main.py", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower()
                                                                                          ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:57:31) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower())
-- ERROR:
File "XXXX", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.lower())
                                                                                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:58:14) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'.lower())
-- ERROR:
File "XXXX", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'.lower())
                                                                                             ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:58:34) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra'.lower()
-- ERROR:
File "XXXX", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra'.lower()
                                                                                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:58:40) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra'.lower())
-- ERROR:
File "XXXX", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra'.lower())
                                                                                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 23:59:03) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra'.lower())
-- ERROR:
File "XXXX", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra'.lower())
                                                                                            ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:01:20) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:01:23) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print(string.lower())
-- EXECUTION TIME:
0.149628
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 11:27:08) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 11:27:15) 
-- CODE:
string = 'Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.'
print(string.lower())
-- EXECUTION TIME:
0.201078
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
